fixed collapsing shortened testimonials and added short sale website

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ li {
   margin-right: 10px;
 }
 
-#testimonials, #aboutMe {
+#testimonials, #aboutMe, #contactForm {
 background-color: lightsteelblue;
 padding: 20px;
 font-style: italic;
